Add some features

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container my-3">
   <div class="container my-5">
-    <form method="post">
+    <form action="submit" method="post">
         <div class="mb-3">
         <label for="username" class="form-label">Логин:</label>
         <input type="text" class="form-control" id="username" name="username" placeholder="Введите логин" required>
