--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-    <div id="result">{{ result }}</div>
+    <div id="result">{{ argument }}</div>
     <h1>header</h1>
     {% block body %}{% endblock %}
 </body>
