--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- кастомные стили -->
     
+    <link href="{{ url_for('static', path='css/styles.css') }}" rel="stylesheet">
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div id="result">{{ argument }}</div>
-    <h1>header</h1>
     {% block body %}{% endblock %}
 </body>
 </html>
