--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -16,4 +16,6 @@
         </div> 
       </div>
   </header>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 {% endblock %}
