--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 
 {% block title %}Таблица лидеров{% endblock %}
 
@@ -18,4 +18,19 @@
   </header>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-{% endblock %}
+{% endblock %} {% endcomment %}
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="./output.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Рейтинг</title>
+  </head>
+  <body>  
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
