--- a/templates/personal_account.html
+++ b/templates/personal_account.html
@@ -7,7 +7,7 @@
       <div class="container d-flex justify-content-between align-items-center">
           <nav class="header-nav">
               <ul class="nav-list">
-                  <li class="nav-item"><a href="/leaderboard">Таблица лидеров</a></li>
+                  <li class="nav-item"><a href="/">Таблица лидеров</a></li>
                   <li class="nav-item"><a href="/personalAccount">Личный кабинет</a></li>
               </ul>
           </nav>
